--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -88,20 +88,10 @@ jobs:
         run: |
           pwsh -ep Bypass -c .\tools\generate-md5.ps1 ./out
           
-      - name: Upload to release
-        uses: ncipollo/release-action@v1
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
         with:
-          artifacts: ./out/*.zip,./out/*.md5sum,./out/*.nupkg
-          draft: true
-          bodyFile: ./out/checksums.md
-          token: ${{ secrets.GITHUB_TOKEN }}
-          
-      - name: Upload to AppCenter
-        env:
-          APPCENTER_TOKEN: ${{ secrets.APPCENTER_TOKEN }}
-        run: |
-          $env:app_ver = (git describe --abbrev=0 --tags)
-          Write-Host "Uploading to AppCenter..." -ForegroundColor Cyan
-          pwsh -ep Bypass -c .\tools\pre-appcenter-upload.ps1
-          pwsh -ep Bypass -c .\tools\appcenter-upload.ps1 $env:APPCENTER_TOKEN $env:app_ver
+          name: ci
+          path: |
+            out/**/*
           
